barra do topo fixada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="barratopo">
+        <img src="images/logo.svg" />
+    </div>
     <div class="paginteira"></div>
-    <script src="inputbasicinfo.js"></script>
+    <script src="javascript/inputbasicinfo.js"></script>
 </body>
 </html>
