--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <div class="paginteira">
     </div>
     <script src="javascript/inputbasicinfo.js"></script>
+    <script src="javascript/criandoperguntas.js"></script>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
