--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     </div>
     <div class="paginteira">
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
     <script src="javascript/inputbasicinfo.js"></script>
     <script src="javascript/criandoperguntas.js"></script>
+    <script src="javascript/successcreation.js"></script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
