--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <script src="javascript/inputbasicinfo.js"></script>
     <script src="javascript/criandoperguntas.js"></script>
-    <script src="javascript/criandoniveis"></script>
+    <script src="javascript/criandoniveis.js"></script>
     <script src="javascript/successcreation.js"></script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
