--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <script src="javascript/criandoperguntas.js"></script>
     <script src="javascript/criandoniveis.js"></script>
     <script src="javascript/successcreation.js"></script>
-
+    <script src="javascript/homepage.js"></script>
+    
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
