--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <script src="javascript/criandoniveis.js"></script>
     <script src="javascript/successcreation.js"></script>
     <script src="javascript/homepage.js"></script>
-    
+    <script src="javascript/exibindoquizz.js"></script>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
