inicio da configuracao da api para armazenar o quizz

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="javascript/inputbasicinfo.js"></script>
     <script src="javascript/criandoperguntas.js"></script>
     <script src="javascript/criandoniveis.js"></script>
+    <script src="javascript/armazenarquizz.js"></script>
     <script src="javascript/successcreation.js"></script>
     <script src="javascript/homepage.js"></script>
     <script src="javascript/exibindoquizz.js"></script>
