--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="javascript/homepage.js"></script>
     <script src="javascript/exibindoquizz.js"></script>
     <script src="javascript/seusquizzes.js"></script>
+    <script src="javascript/logicaquizz.js"></script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
