grandes ajustes no css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="barratopo">
         <img src="images/logo.svg" />
     </div>
-    <div class="paginteira">
-    </div>
+    <div class="paginteira"><div class="master"></div></div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     
     <script src="javascript/inputbasicinfo.js"></script>
